# poker-room

./: .gitignore  app.py  docker-compose.yml  gameplay.Dockerfile  requirements.txt  tox.ini  ui.Dockerfile
backend/: app.py  models.py  mq.py  pyproject.toml  requirements.txt  sockets.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.js  router.js
frontend/src/components/: Game.vue  Lobby.vue
gameplay/: client_sample.py  deck.py  hand.py  pyproject.toml  start.py  utils.py
goguiapp/: chat.go  colors.go  go.mod  go.sum  main.go  note.go  player.go  tmp.go
templates/: base.html  index.html  login.html  table.html
