[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["valerii <valeriykundas@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
flask = "^1.1.2"
requests = "^2.23.0"
simplejson = "^3.17.0"
flask_cors = "^3.0.8"
flask_socketio = "^4.3.0"
mongoengine = "^0.20.0"
pika = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
