[tool.poetry]
name = "gameplay"
version = "0.1.0"
description = ""
authors = ["valerii <valeriykundas@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
pika = "^1.1.0"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
